--- a/.github/workflows/ci_workflow.yml
+++ b/.github/workflows/ci_workflow.yml
@@ -1,19 +1,18 @@
-name: CI Model Retraining and Docker Build
+name: CI Model Retraining and Docker Build (Pip)
 
 on:
   push:
     branches:
-      - main 
+      - main
     paths:
-      # Trigger jika ada perubahan di dalam folder MLflow Project atau workflow ini sendiri
       - 'MLProject/**' 
       - '.github/workflows/ci_workflow.yml'
-
+  workflow_dispatch:
 
 jobs:
   # Job pertama: Melatih ulang model menggunakan MLflow Project
   retrain_and_log_model:
-    name: Retrain Model with MLflow Project
+    name: Retrain Model with MLflow Project (Pip)
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -23,51 +22,41 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Set up Python (untuk MLflow CLI dan DagsHub client)
+      - name: Set up Python
+        id: setup_python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.9'
+          python-version: '3.9' 
 
-      - name: Install MLflow and DagsHub Client
+      - name: Install Dependencies (pip)
         run: |
           python -m pip install --upgrade pip
-          pip install mlflow>=2.1 dagshub>=0.3
-
-      - name: Set up Conda (Miniconda)
-        uses: conda-incubator/setup-miniconda@v3
-        with:
-          environment-file: MLProject/conda.yaml
-          python-version: 3.9
-          auto-activate-base: false
-          activate-environment: ''
-          use-only-tar-bz2: true
+          # Instal dari requirements.txt yang ada di dalam working-directory (MLProject/)
+          pip install -r requirements.txt 
+          echo "Dependensi berhasil diinstal dari requirements.txt"
 
       - name: Run MLflow Project
         env:
           DAGSHUB_USER_TOKEN: ${{ secrets.DAGSHUB_TOKEN }}
-        # Menggunakan bash dan memastikan inisialisasi conda
-        shell: bash -l {0} # Tambahkan -l untuk login shell, yang sering menginisialisasi conda
-        run: |
-          echo "Current directory before mlflow run: $(pwd)"
-          echo "Listing files in current directory: $(ls -la)"
-          
-          # Coba cek apakah conda ada di PATH dan inisialisasi shell jika perlu
-          conda info --envs # Perintah ini juga bisa membantu menginisialisasi shell untuk conda
-          # Atau, jika setup-miniconda tidak secara otomatis menginisialisasi untuk sub-shell mlflow:
-          # eval "$(conda shell.bash hook)" # Inisialisasi shell bash untuk conda
-          # conda activate mlflow_ci_classification_env # Coba aktifkan environment secara manual SEBELUM mlflow run
-                                                      # Nama env ini harus sesuai dengan 'name' di conda.yaml
 
+        run: |
+          echo "Current directory: $(pwd)"
+          echo "Python version: $(python --version)"
+          echo "MLflow version: $(mlflow --version)"
+          echo "Listing files in current directory (MLProject/): $(ls -la)"
           echo "Running MLflow Project..."
-          # MLflow akan mencoba membuat/mengaktifkan environment berdasarkan conda.yaml di MLproject
-          mlflow run . -P tracking_mode="dagshub" -P experiment_name="Shopping_Trends_CI_GitHubActions"
+
+        mlflow run . \
+            -P tracking_mode="dagshub" \
+            -P experiment_name="Shopping_Trends_CI_Pip_Actions" \
+            -P dagshub_user="${{ secrets.DAGSHUB_USERNAME_OVERRIDE || 'ardenaAfif' }}" \
+            -P dagshub_repo="${{ secrets.DAGSHUB_REPO_OVERRIDE || 'SMSML_Ardena-Afif' }}"
 
   # Job kedua: Membangun dan mendorong image Docker
   build_and_push_docker_image:
-    name: Build and Push Docker Image
+    name: Build and Push Docker Image (Pip)
     runs-on: ubuntu-latest
-    
-    needs: retrain_and_log_model 
+    needs: retrain_and_log_model
     
     steps:
       - name: Checkout Repository
@@ -83,14 +72,15 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push Docker image
+        id: docker_build
         uses: docker/build-push-action@v5
         with:
           context: ./MLProject
           file: ./MLProject/Dockerfile
-          push: true # Set ke true untuk mendorong image setelah build berhasil
-          tags: | # Daftar tag untuk image
-            ${{ secrets.DOCKERHUB_USERNAME }}/shopping-trends-model:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/shopping-trends-model:${{ github.sha }} 
-            # Menambahkan tag dengan SHA commit untuk versioning
-          build-args: |
-            ARG_NAME=value
+          push: true 
+          tags: | 
+            ${{ secrets.DOCKERHUB_USERNAME }}/shopping-trends-model-pip:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/shopping-trends-model-pip:${{ github.sha }}
+      
+      - name: Print image digest
+        run: echo "Image digest: ${{ steps.docker_build.outputs.digest }}"
