--- a/.github/workflows/ci_workflow.yml
+++ b/.github/workflows/ci_workflow.yml
@@ -1,90 +1,91 @@
-name: CI Model Retraining and Docker Build (Pip)
+name: CI Workflow for Shopping Trends
 
 on:
   push:
-    branches:
-      - main
-    paths:
-      - 'MLProject/**' 
-      - '.github/workflows/ci_workflow.yml'
+    branches: [main]
   workflow_dispatch:
 
-jobs:
-  # Job pertama: Melatih ulang model menggunakan MLflow Project
-  retrain_and_log_model:
-    name: Retrain Model with MLflow Project (Pip)
+env:
+  DAGSHUB_USER_TOKEN: ${{ secrets.DAGSHUB_TOKEN }}
+  DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+  DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
+  MLFLOW_TRACKING_USERNAME: ${{ secrets.DAGSHUB_USERNAME }}
+  MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGSHUB_TOKEN }}
+
+  jobs:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./MLProject 
-
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
 
-      - name: Set up Python
-        id: setup_python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.9' 
+    - name: ⬇️ Checkout Repository
+      uses: actions/checkout@v3
 
-      - name: Install Dependencies (pip)
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt 
-          echo "Dependensi berhasil diinstal dari requirements.txt"
+    - name: 🐍 Set up Python 3.10
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
 
-      - name: Run MLflow Project
-        env:
-          DAGSHUB_USER_TOKEN: ${{ secrets.DAGSHUB_TOKEN }}
-          DAGSHUB_USERNAME: ${{ secrets.DAGSHUB_USERNAME_OVERRIDE }}
-          DAGSHUB_REPO: ${{ secrets.DAGSHUB_REPO_OVERRIDE }}
-        run: |
-          echo "Current directory: $(pwd)"
-          echo "Python version: $(python --version)"
-          echo "MLflow version: $(mlflow --version)"
-          echo "Listing files in current directory (MLProject/): $(ls -la)"
-          echo "Running MLflow Project..."
+    - name: 🔍 Check Python & Pip Version
+      run: |
+        python --version
+        pip --version
 
-          dagshub_user=${DAGSHUB_USERNAME:-ardenaAfif}
-          dagshub_repo=${DAGSHUB_REPO:-SMSML_Ardena-Afif}
+    - name: 📦 Install Dependencies
+      run: |
+        pip install -r requirements.txt
+        pip install mlflow dagshub scikit-learn pandas matplotlib seaborn
 
-          mlflow run . \
-            -P tracking_mode="dagshub" \
-            -P experiment_name="Shopping_Trends_CI_Pip_Actions" \
-            -P dagshub_user="$dagshub_user" \
-            -P dagshub_repo="$dagshub_repo"
+    - name: 🚀 Run MLflow Project
+      run: |
+        mlflow run . \
+          -P data_file=processed_shopping_trends.csv \
+          -P tracking_mode=dagshub \
+          -P dagshub_user=ardenaAfif \
+          -P dagshub_repo=SMSML_Ardena-Afif \
+          -P experiment_name=Shopping_Trends_CI_Pip \
+          -P local_mlflow_server_uri=http://127.0.0.1:5000
 
-  # Job kedua: Membangun dan mendorong image Docker
-  build_and_push_docker_image:
-    name: Build and Push Docker Image (Pip)
-    runs-on: ubuntu-latest
-    needs: retrain_and_log_model
-    
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+    - name: 🆔 Get Latest MLflow run_id
+      id: get_run_id
+      run: |
+        echo "Getting latest run ID..."
+        RUN_ID=$(mlflow runs list --experiment-name Shopping_Trends_CI_Pip --order-by attributes.start_time desc | awk 'NR==2 {print $1}')
+        echo "Latest run ID is: $RUN_ID"
+        echo "RUN_ID=$RUN_ID" >> $GITHUB_ENV
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+    - name: 📤 Upload Artifacts to GitHub
+      uses: actions/upload-artifact@v4
+      with:
+        name: mlflow-artifacts
+        path: ./artifacts_temp/
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: 🛠️ Build Docker Image using MLflow
+      run: |
+        mlflow models build-docker -m "runs:/${{ env.RUN_ID }}/model" -n shopping-trends-ci:latest
 
-      - name: Build and push Docker image
-        id: docker_build 
-        uses: docker/build-push-action@v5
-        with:
-          context: ./MLProject 
-          file: ./MLProject/Dockerfile 
-          push: true 
-          tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/shopping-trends-model-pip:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/shopping-trends-model-pip:${{ github.sha }}
+    - name: 🔐 Log in to Docker Hub
+      run: echo "${{ env.DOCKER_PASSWORD }}" | docker login -u "${{ env.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Print image digest
-        if: steps.docker_build.outputs.digest != ''
-        run: echo "Image digest: ${{ steps.docker_build.outputs.digest }}"
+    - name: 🏷️ Tag Docker Image
+      run: |
+        docker tag shopping-trends-ci:latest ${{ env.DOCKER_USERNAME }}/shopping-trends-ci:latest
+
+    - name: 🚢 Push Docker Image to Docker Hub
+      run: |
+        docker push ${{ env.DOCKER_USERNAME }}/shopping-trends-ci:latest
+
+    - name: 📤 Post Log in to Docker Hub (Logout)
+      if: always()
+      run: docker logout
+
+    - name: 🧹 Post Set up Python
+      if: always()
+      run: echo "Post Python setup completed."
+
+    - name: 🧹 Post Checkout
+      if: always()
+      run: echo "Post checkout step completed."
+
+    - name: ✅ Complete Job
+      if: always()
+      run: echo "CI Workflow for ML and Docker finished successfully."
