--- a/.github/workflows/ci_workflow.yml
+++ b/.github/workflows/ci_workflow.yml
@@ -20,10 +20,10 @@ jobs:
     - name: ⬇️ Checkout Repository
       uses: actions/checkout@v3
 
-    - name: 🐍 Set up Python 3.10
+    - name: 🐍 Set up Python 3.12.7
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: '3.12.7'
 
     - name: 🔍 Check Python & Pip Version
       run: |
@@ -38,6 +38,7 @@ jobs:
     - name: 🚀 Run MLflow Project
       run: |
         mlflow run ./MLProject \
+          --env-manager=local
           -P data_file=processed_shopping_trends.csv \
           -P tracking_mode=dagshub \
           -P dagshub_user=ardenaAfif \
