--- a/.github/workflows/ci_workflow.yml
+++ b/.github/workflows/ci_workflow.yml
@@ -65,31 +65,31 @@ jobs:
 
     - name: 🆔 Get MLflow Experiment ID and Latest Run ID
       id: get_ids
-      shell: bash
       run: |
-        echo "Target MLflow Experiment Name: ${{ env.MLFLOW_EXPERIMENT_NAME }}"
-        
-        EXPERIMENT_JSON=$(mlflow experiments list --output-format json)
-        echo "Experiment search result: ${EXPERIMENT_JSON}"
-        EXPERIMENT_ID=$(echo "${EXPERIMENT_JSON}" | jq -r --arg name "${{ env.MLFLOW_EXPERIMENT_NAME }}" '.[] | select(.name == $name) | .experiment_id')
-        
-        if [[ -z "$EXPERIMENT_ID" || "$EXPERIMENT_ID" == "null" ]]; then
-          echo "Error: Experiment '${{ env.MLFLOW_EXPERIMENT_NAME }}' not found or ID is null."
-          exit 1
-        fi
-        echo "EXPERIMENT_ID=${EXPERIMENT_ID}" >> $GITHUB_ENV
-        echo "Found Experiment ID: ${EXPERIMENT_ID}"
+        import os
+        from mlflow.tracking import MlflowClient
 
-        RUN_JSON=$(mlflow runs list --experiment-id "${EXPERIMENT_ID}" --order-by "attributes.start_time DESC" --output-format json)
-        echo "Run list result for experiment ${EXPERIMENT_ID}: ${RUN_JSON}"
-        RUN_ID=$(echo "${RUN_JSON}" | jq -r '.[0].info.run_id')
+        experiment_name = os.environ["MLFLOW_EXPERIMENT_NAME"]
+        client = MlflowClient()
 
-        if [[ -z "$RUN_ID" || "$RUN_ID" == "null" ]]; then
-          echo "Error: No runs found for Experiment ID '${EXPERIMENT_ID}' or Run ID is null."
-          exit 1
-        fi
-        echo "RUN_ID=${RUN_ID}" >> $GITHUB_ENV
-        echo "Found Run ID: ${RUN_ID}"
+        experiment = client.get_experiment_by_name(experiment_name)
+        if experiment is None:
+            raise Exception(f"Experiment '{experiment_name}' not found.")
+        experiment_id = experiment.experiment_id
+        print(f"✅ Found Experiment ID: {experiment_id}")
+
+        runs = client.search_runs(experiment_ids=[experiment_id], order_by=["attributes.start_time DESC"])
+        if not runs:
+            raise Exception(f"No runs found for experiment ID {experiment_id}.")
+        run_id = runs[0].info.run_id
+        print(f"✅ Found Run ID: {run_id}")
+
+        # Write to GitHub Actions Environment
+        with open(os.environ["GITHUB_ENV"], "a") as f:
+            f.write(f"EXPERIMENT_ID={experiment_id}\n")
+            f.write(f"RUN_ID={run_id}\n")
+      shell: python
+
 
     - name: 📤 Upload MLflow Run Directory to GitHub
       uses: actions/upload-artifact@v4
